# json_tui

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/ui/: mod.rs
